--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,10 @@
   * {
     @apply border-border;
   }
+  html {
+    @apply scroll-smooth;
+  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground font-albertsans;
   }
 }
